Fix header spacing

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,7 +5,7 @@
     height: 100%;
     justify-content: space-between;
     width: 100%;
-    margin: 5% 0;
+    margin-bottom: 5%;
   }
   
   .title {
